PROJECT(main)
SET(SRC_LIST main.cpp golf.cpp)
SET(CMAKE_CXX_COMPILER "clang++")
SET(CMAKE_CXX_FLAGS "-std=c++11 -Werror -Weverything -Wno-c++98-compat -Wc++98-compat-pedantic -Wno-float-equal -Wno-global-constructors -Wno-exit-time-destructors -Wno-missing-prototypes -O3")
SET(CMAKE_BUILD_TYPE Release)
ADD_EXECUTABLE(main ${SRC_LIST})
